r4ds link added

--- a/index.html
+++ b/index.html
@@ -451,6 +451,20 @@
 </div>
 </div>
 </div>
+</section>
+<section id="antes-de-comenzar-3" class="slide level2">
+<h2>Antes de comenzar…</h2>
+<div class="columns">
+<div class="column" style="width:30%;">
+<h3 class="column" width="50%" style="margin-top: 200px; text-align:center" id="la-biblia">LA BIBLIA</h3>
+</div><div class="column" style="width:70%;">
+<div class="quarto-figure quarto-figure-center">
+<figure>
+<p><a href="https://r4ds.had.co.nz"><img data-src="https://d33wubrfki0l68.cloudfront.net/b88ef926a004b0fce72b2526b0b5c4413666a4cb/24a30/cover.png" width="367"></a></p>
+</figure>
+</div>
+</div>
+</div>
 </section></section>
 <section>
 <section id="exploración-y-visualización-de-datos-con-r" class="title-slide slide level1 center">
